# bert_exportable

./: .gitignore  .gitmodules  BUILD.bazel  README.md  UPDATE  WORKSPACE  run_squad.py
client/: .client.py.swp  BUILD  client.py
docker/: Dockerfile
pip_import/: BUILD  requirements.txt
